kyverno_policy/policy-06.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-security-context
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-security-context
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Containers must run as non-root and not allow privilege escalation"
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
